First improved page

--- a/index.html
+++ b/index.html
@@ -1,63 +1,77 @@
 <!DOCTYPE html>
-<html lang="US">
+<html lang="en-US">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width initial-scale=1.0">
   <meta name="description" content="WDD 131 -  Dynamic Web Fundamentals - Jaures Guedou">
-  <meta name="author"   content="Jaures Guedou">
+  <meta name="author" content="Jaures Guedou">
   <title>WDD 131 - Dynamic Web Fundamentals - Jaures Guedou</title>
   <link rel="stylesheet" href="styles/base.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,100..900&family=Roboto:ital@1&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
   <script src="scripts/getdates.js" defer></script>
 </head>
+
 <body>
-    <header>
-        <h1>WDD 131: Dynamics Web Fundamentals- Jaures Guedou</h1>
-        <nav>
-          <a href="http://linkedin.com/in/jaures-guedou-893687249">LinkedIn</a>
-          <a href="https://byupw.instructure.com/">Canvas</a>
-          <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/5?lang=eng">Scripture</a> 
-          <a href="#Final Project">Final Project</a>
-        </nav>
-    </header>
-    <main>
-        <section class="card">
+  <header>
+    <h1>WDD 131: Dynamics Web Fundamentals- Jaures Guedou</h1>
+    <nav>
+      <a href="http://linkedin.com/in/jaures-guedou-893687249">LinkedIn</a>
+      <a href="https://byupw.instructure.com/">Canvas</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/5?lang=eng">Scripture</a>
+      <a href="#Final-Project">Final Project</a>
+      <a href="Photo-Album"></a>
+      <a href="Contact-Us"></a>
+      <a href="Next-Page"></a>
+    </nav>
+  </header>
+  <main>
+    <section class="card">
 
-           <h2>About me</h2>
-           <div class="content">
-              <p>My name is Jaures Guedou. I am from Benin and i was born in this country.I love<br>listening to music and reading books. </p>
-              <img src="images/profile.webp" width="130px" height="150px"  >
-           </div>
-           <h3>All about Benin </h3>
-           <hr>
-           <div class="slide">
-            <figure>
-               <img src="images/flag.webp" width="150px">
-               <figcaption>The official flag of Benin</figcaption>
-            </figure>
-            <p>Benin is one of smallest country in west Africa<br>with a population of about Fifteen million people.</p>
-           </div>
-        </section>
-        <section class="card">
-          <h4>Web Dev Resources</h4>
-          <ul>
-            <li >Dev.to Community </li>
-            <li>Smashing Magazine</li>
-            <li>CSS Tricks</li>
-            <li>W3 Schools</li>
-            <li>Udemy</li>
-            <li>Images Placeholder</li>
-          </ul>
-        </section>
-
-    </main>
-    <footer>
-      <div class="beauty">
-         <p>
-          ©️<span id="currentyear"></span>💬Jaures Guedou💬Benin
-         </p>
+      <h2>About me</h2>
+      <div class="content">
+        <p>My name is Jaures Guedou. I am from Benin and i was born in this country.I love<br>listening to music and
+          reading books. </p>
+        <img src="images/profile.webp" width="130" height="150" alt="Profile picture">
       </div>
-      <p id="lastModified" width="1px"></p>
-    </footer>
-    
+      <h3>All about Benin </h3>
+      <hr>
+      <div class="slide">
+        <figure>
+          <img src="images/flag.webp" width="150" alt="Benin Flag">
+          <figcaption>The official flag of Benin</figcaption>
+        </figure>
+        <p>Benin is one of smallest country in west Africa<br>with a population of about Fifteen million people.</p>
+      </div>
+    </section>
+    <section class="card">
+      <div class="pip">
+        <h3>Web Dev Resources</h3>
+      </div>
+      <ul>
+        <li>Dev.to Community </li>
+        <li>Smashing Magazine</li>
+        <li>CSS Tricks</li>
+        <li>W3 Schools</li>
+        <li>Udemy</li>
+        <li>Images Placeholder</li>
+      </ul>
+    </section>
+
+  </main>
+  <footer>
+    <div class="beauty">
+      <p>
+        ©️<span id="currentyear"></span>💬Jaures Guedou💬Benin
+      </p>
+    </div>
+    <div class="date">
+      <p id="lastModified" style="width: 1px;"></p>
+    </div>
+  </footer>
+
 </body>
+
 </html>
