--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           reading books. </p>
         <img src="images/profile.webp" width="130" height="150" alt="Profile picture">
       </div>
-      <h3>All about Benin </h3>
+      <div class="need">
+        <h2>All about Benin </h2>
+      </div>
       <hr>
       <div class="slide">
         <figure>
@@ -48,7 +50,7 @@
     </section>
     <section class="card">
       <div class="pip">
-        <h3>Web Dev Resources</h3>
+        <h2>Web Dev Resources</h2>
       </div>
       <ul>
         <li>Dev.to Community </li>
@@ -68,7 +70,7 @@
       </p>
     </div>
     <div class="date">
-      <p id="lastModified" style="width: 1px;"></p>
+      <p id="lastModified" "></p>
     </div>
   </footer>
 
