--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </p>
     </div>
     <div class="date">
-      <p id="lastModified" "></p>
+      <p id="lastModified" ></p>
     </div>
   </footer>
 
