--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="styles/base.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,100..900&family=Roboto:ital@1&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,100..900&family=Roboto:ital@1&family=Smooch+Sans:wght@100..900&display=swap"
+    rel="stylesheet">
   <script src="scripts/getdates.js" defer></script>
 </head>
 
@@ -18,16 +20,16 @@
   <header>
     <h1>WDD 131: Dynamics Web Fundamentals- Jaures Guedou</h1>
     <nav>
-      <a href="http://linkedin.com/in/jaures-guedou-893687249">LinkedIn</a>
+      <a href="https://linkedin.com/in/jaures-guedou-893687249">LinkedIn</a>
       <a href="https://byupw.instructure.com/">Canvas</a>
       <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/5?lang=eng">Scripture</a>
       <a href="#Final-Project">Final Project</a>
-      <a href="Photo-Album"></a>
-      <a href="Contact-Us"></a>
-      <a href="Next-Page"></a>
+      <a href="#" class="hidden-link" aria-hidden="true">Photo Album</a>
+      <a href="#" class="hidden-link" aria-hidden="true">Contact us</a>
+      <a href="#" class="hidden-link" aria-hidden="true">Next Page</a>
     </nav>
   </header>
-  <main>
+  <main role="main">
     <section class="card">
 
       <h2>About me</h2>
@@ -70,7 +72,7 @@
       </p>
     </div>
     <div class="date">
-      <p id="lastModified" ></p>
+      <p id="lastModified"></p>
     </div>
   </footer>
 
