Temple photo two

--- a/temples.html
+++ b/temples.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nice picture of the Lord's temple">
+    <meta name="author" content="Jaures Guedou">
     <title>Temple Photos</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
@@ -30,7 +32,8 @@
 
     </header>
     <main>
-        <h1>Home</h1>
+        <h1>Temple Album Home</h1>
+        <h2>Explore Our Collection</h2>
       <div class="pic">
         <figure>
             <img src="images/temple.jpeg" alt="The Lord Temple">
