--- a/temples.html
+++ b/temples.html
@@ -32,48 +32,51 @@
 
     </header>
     <main>
-        <h1>Temple Album Home</h1>
-        <h2>Explore Our Collection</h2>
-      <div class="pic">
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
+        <h1> Home</h1>
+        <div class="album">
+         <h1>Album</h1>
+        </div>
+         <h2>Explore Our Collection</h2>
+        <div class="pic">
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
 
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" width="300" height="250" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.jpeg" alt="The Lord Temple">
-            <figcaption>Bern Switzerland Temple</figcaption>
-        </figure>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" width="300" height="250" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.jpeg" alt="The Lord Temple">
+                <figcaption>Bern Switzerland Temple</figcaption>
+            </figure>
 
-      </div>
+        </div>
 
     </main>
     <footer>
