--- a/temples.html
+++ b/temples.html
@@ -34,7 +34,7 @@
     <main>
         <h1> Home</h1>
         <div class="album">
-         <h1>Album</h1>
+         <h1>Temple</h1>
         </div>
          <h2>Explore Our Collection</h2>
         <div class="pic">
