--- a/temples.html
+++ b/temples.html
@@ -32,11 +32,8 @@
 
     </header>
     <main>
-        <h1> Home</h1>
-        <div class="album">
-         <h1>Temple</h1>
-        </div>
-         <h2>Explore Our Collection</h2>
+        <h1> Temple Home</h1>
+        <h2>Explore Our Collection</h2>
         <div class="pic">
             <figure>
                 <img src="images/temple.jpeg" alt="The Lord Temple">
