--- a/temples.html
+++ b/temples.html
@@ -20,6 +20,9 @@
 <body>
     <header>
         <p>Temple Album</p>
+        <div class="album">
+        <h1>Temple</h1>
+        </div>
         <button id="hamburger" class="hamburger" aria-label="Toggle navigation">☰</button>
         <nav id="menu" class="hidden">
             <a href="#Home">Home</a>
@@ -32,7 +35,7 @@
 
     </header>
     <main>
-        <h1> Temple Home</h1>
+        <h1>Home</h1>
         <h2>Explore Our Collection</h2>
         <div class="pic">
             <figure>
