--- a/temples.html
+++ b/temples.html
@@ -19,8 +19,7 @@
 
 <body>
     <header>
-        <h1>Temple</h1>
-        <p>Temple Album</p>
+        <h1>Temple Album</h1>
         <button id="hamburger" class="hamburger" aria-label="Toggle navigation">☰</button>
         <nav id="menu" class="hidden">
             <a href="#Home">Home</a>
@@ -32,7 +31,10 @@
         </nav>
 
     </header>
-    <main>     
+    <main> 
+        <div class="Album">
+        <h1>Home</h1> 
+        </div>   
         <h2>Explore Our Collection</h2>
         <div class="pic">
             <figure>
