--- a/temples.html
+++ b/temples.html
@@ -19,7 +19,10 @@
 
 <body>
     <header>
-        <h1>Temple Album</h1>
+        <h1>Temple</h1>
+        <div class="Album">
+        <p>Temple Album</p>
+        </div>
         <button id="hamburger" class="hamburger" aria-label="Toggle navigation">☰</button>
         <nav id="menu" class="hidden">
             <a href="#Home">Home</a>
@@ -31,10 +34,10 @@
         </nav>
 
     </header>
-    <main> 
-        <div class="Album">
+    <main>
+        <div class="good">
         <h1>Home</h1> 
-        </div>   
+        </div>    
         <h2>Explore Our Collection</h2>
         <div class="pic">
             <figure>
