--- a/temples.html
+++ b/temples.html
@@ -19,6 +19,7 @@
 
 <body>
     <header>
+        <h1>Temple</h1>
         <p>Temple Album</p>
         <button id="hamburger" class="hamburger" aria-label="Toggle navigation">☰</button>
         <nav id="menu" class="hidden">
