Last wow temple

--- a/temples.html
+++ b/temples.html
@@ -19,7 +19,10 @@
 
 <body>
     <header>
+        <p>Temple Album</p>
+        <div class="good">
         <h1>Temple</h1>
+        </div>
         <button id="hamburger" class="hamburger" aria-label="Toggle navigation">☰</button>
         <nav id="menu" class="hidden">
             <a href="#Home">Home</a>
@@ -33,7 +36,7 @@
     </header>
     <main> 
         <div class="Album"> 
-        <h1>Temple</h1>
+        <h1>Home</h1>
         </div> 
         <h2>Explore Our Collection</h2>
         <div class="pic">
