--- a/place.html
+++ b/place.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nice place i want to visit">
+    <meta name="author" content="Jaures Guedou">
     <title>Country </title>
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
