--- a/place.html
+++ b/place.html
@@ -11,7 +11,7 @@
     <script src="scripts/place.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@1,100..900&family=Roboto:ital@1&family=Smooch+Sans:wght@100..900&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@1,100..900&family=Roboto:ital@1&family=Smooch+Sans:wght@100..900&display=swap"rel="stylesheet">
 </head>
 
 <body>
