yeah ninth attempt

--- a/place.html
+++ b/place.html
@@ -46,7 +46,7 @@
                     <img src="images/weather-icon.svg" alt="Weather Icon">
                 </div>
                 <p>Temperature:12°</p>
-                <p>Conditions:</p>
+                <p>Conditions:Cool and Breezy</p>
                 <p>Wind:20 km/h</p>
                 <div class="windchill">
                     <p>Wind Chill:</p>
