--- a/place.html
+++ b/place.html
@@ -1,19 +1,18 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Nice place i want to visit">
+    <meta name="description" content="Nice place I want to visit">
     <meta name="author" content="Jaures Guedou">
-    <title>Country </title>
+    <title>Country</title>
     <link rel="stylesheet" href="styles/place.css" media="print" onload="this.media='all'">
     <script src="scripts/place.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@1,100..900&family=Roboto:ital@1&family=Smooch+Sans:wght@100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,31 +22,35 @@
     <main>
         <section class="hero">
             <picture>
-                <source media="(min-width:1024px )" srcset="images/hero-large.webp">
-                <source media="(min-width:748px )" srcset="images/hero-medium.webp">
+                <source media="(min-width:1024px)" srcset="images/hero-large.webp">
+                <source media="(min-width:748px)" srcset="images/hero-medium.webp">
                 <img src="images/hero-image.webp" alt="Hero Image">
             </picture>
             <div class="data">
                 <h2>Data</h2>
                 <div class="move">
-                    <p>Area:1,214 km²</p>
-                    <p>Population:8000000</p>
-                    <p>Capital:Albany</p>
-                    <p>Language:English</p>
-                    <p>Currency:U.S Dollar</p>
-                    <p>Time Zone:UTC-5</p>
-                    <p>Calling Code:+1</p>
-                    <p>Internet TLD:.nyc</p>
+                    <p>Area: 1,214 km²</p>
+                    <p>Population: 8,000,000</p>
+                    <p>Capital: Albany</p>
+                    <p>Language: English</p>
+                    <p>Currency: U.S Dollar</p>
+                    <p>Time Zone: UTC-5</p>
+                    <p>Calling Code: +1</p>
+                    <p>Internet TLD: .nyc</p>
                 </div>
             </div>
             <div class="weather">
-                <h2>Weather ⛅</h2>
+                <h2>Weather </h2>
                 <div class="icon">
-                    <img src="images/weather-icon.svg" alt="Weather Icon">
+                    <!-- SVG icon for mobile view -->
+                    <svg id="mobile-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                        <circle cx="32" cy="32" r="30" fill="lightblue" />
+                        <path d="M32 16a16 16 0 100 32 16 16 0 000-32z" fill="yellow" />
+                    </svg>
                 </div>
-                <p>Temperature:12°</p>
-                <p>Conditions:Cool and Breezy</p>
-                <p>Wind:20 km/h</p>
+                <p>Temperature: 12°</p>
+                <p>Conditions: Cool and Breezy</p>
+                <p>Wind: 20 km/h</p>
                 <div class="windchill">
                     <p>Wind Chill:</p>
                 </div>
@@ -56,15 +59,12 @@
     </main>
     <footer>
         <div class="beauty">
-            <p>
-                ©️<span id="currentyear"></span>💬Jaures Guedou💬Benin
-            </p>
+            <p>©️<span id="currentyear"></span>💬Jaures Guedou💬Benin</p>
         </div>
         <div class="date">
             <p id="lastModified"></p>
         </div>
     </footer>
-
 </body>
 
 </html>
