--- a/place.html
+++ b/place.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nice place I want to visit">
     <meta name="author" content="Jaures Guedou">
-    <title>Country</title>
+    <title>Place Page </title>
     <link rel="stylesheet" href="styles/place.css" media="print" onload="this.media='all'">
     <script src="scripts/place.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
