Yeah i push second

--- a/place.html
+++ b/place.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Jaures Guedou">
     <title>Country </title>
     <link rel="stylesheet" href="styles/place.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="styles/place-responsive.css" media="print" onload="this.media='all'">
     <script src="scripts/place.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
