Yeah I push the last

--- a/place.html
+++ b/place.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="weather">
-                <h2>Weather ⛅</h2>
+                <h2>Weather <span class="emoji">⛅</span></h2>
                 <div class="icon">
                     <img src="images/weather-icon.svg" alt="Weather Icon">
                 </div>
