--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="styles/filtered-temple-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="image" href="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/400x250/aba-nigeria-temple-lds-273999-wallpaper.jpg">
+
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@1,100..900&family=Roboto:ital@1&family=Smooch+Sans:wght@100..900&display=swap"
         rel="stylesheet">
@@ -36,7 +38,7 @@
     </header>
     <main> 
         <div class="Album"> 
-        <h1>Home</h1>
+        <h1>Temle</h1>
         </div> 
         <h2>Explore Our Collection</h2>
         <div class="temple-cards"></div>
