--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -38,7 +38,7 @@
     </header>
     <main> 
         <div class="Album"> 
-        <h1>Temle</h1>
+        <h1>Temple</h1>
         </div> 
         <h2>Explore Our Collection</h2>
         <div class="temple-cards"></div>
