--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -19,11 +19,11 @@
     <header>
         <h1>Website Planning Document</h1>
     </header>
-    <section id="site name">
+    <section id="site-name">
         <h2>Best Drip Ever</h2>
         <p> The word 'Drip' is a slang term in the american meaning a good outfit. <br/>So the Best Drip Ever is the trendiest outfits ever.</p>
     </section>
-    <section id="site purpose">
+    <section id="site-purpose">
         <h2>Site Purpose</h2>
         <p>The site sells different kinds of pants , shorts ,clothes at average costs for men and women. <br>The avantage is when wearing them you  will look as good as someone who spent a lot of money for his or her outfit.</p>
     </section>
