--- a/form.html
+++ b/form.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <meta name="description" content="Submit a review for a product">
+    <meta name="author" content="Jaures Guedou">
+    <title>Product Review</title>
     <link rel="stylesheet" href="styles/form.css">
     <link rel="stylesheet" href="styles/form-large.css">
     <script src="scripts/form.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&family=Roboto+Condensed:wght@100..900&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,8 +22,8 @@
        
         <form id="reviewForm" method="get" action="review.html">
               <div class="product"> 
-                <label for="productName">Product name</label>
-                <select name="products" id="item"required >
+                <label>Product name</label>
+                <select name="products" id="item" required >
                   <option value="" disabled selected>Select a Product ...</option>
                 </select>    
               </div>   
@@ -29,14 +34,14 @@
             <div class="rating">
                 <input type="radio" id="fivestar" name="stars" value="5" required><label for="fivestar">&star;</label>
                 <input type="radio" id="fourstar" name="stars" value="4" required><label for="fourstar">&star;&star;</label>
-                <input type="radio" id="threestar"name="stars" value="3" required><label for="threestar">&star;&star;&star;</label>
+                <input type="radio" id="threestar" name="stars" value="3" required><label for="threestar">&star;&star;&star;</label>
                 <input type="radio" id="twostar" name="stars" value="2" required><label for="twostar">&star;&star;&star;&star;</label>
                 <input type="radio" id="onestar" name="stars" value="1" required><label for="onestar">&star;&star;&star;&star;&star;</label>
             </div>
            </div>
 
            <div class="date">
-             <label for="dateInstalled">Date of Installation</label>
+             <label>Date of Installation</label>
                 <input type="date" name="date" id="when" required>
              
           </div>
@@ -51,7 +56,7 @@
             </div> 
           </div>
           <div class="written-review">
-             <label for="review">Written Review(Optional)</label>
+             <label>Written Review(Optional)</label>
               <div class="write">
                 <textarea name="review" id="written" rows="8" cols="154">
 
